tests/snapshots/compile_entrypoint__foo.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_entrypoint/foo.bend
---
@bar = (a a)

@foo = a
  & @bar ~ (2 a)
