tests/snapshots/compile_entrypoint__foo.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_entrypoint/foo.hvm
---
@bar = (a a)

@foo = a
  & @bar ~ (#33 a)
